--- a/templates/inventario/registrarEntrada.html
+++ b/templates/inventario/registrarEntrada.html
@@ -6,30 +6,54 @@
 {% block titulo_pagina %}Registro de entrada{% endblock titulo_pagina %}
 
 {% block css %}
+
 <style>
  .form-group .checkbox label, .form-group .radio label, .form-group label {color: black;}
-
 </style>
 
 {% endblock css %}
 
-
 {% block miga_pan %}
+
   <li><a href="/inventario"><i class="fa fa-dashboard"></i> Dashboard Inventario</a></li>
-  <li><a href="/inventario/entradas"><i class="fa fa-dashboard"></i> Ordenes de Compra</a></li>
+  <li><a href="/inventario/entradas"><i class="fa fa-dashboard"></i> Entradas</a></li>
   <li class="active">Registrar Entrada</li>
+
 {% endblock miga_pan %}
 
-{% block titulo_panel %}Orden de Compra #{{ orden }}{% endblock titulo_panel %}
+{% block titulo_panel %} Orden de Compra #{{ orden.id }} {% endblock titulo_panel %}
 
 {% block contenido_panel %}
+
+<div class="col-md-4">
+<div class="box-body table-responsive no-padding">
+              <table class="table table-bordered table-striped">
+                <tbody><tr>
+                  <th>Articulo</th>
+                  <th>Precio</th>
+                  <th>Cantidad</th>
+                  <th>Proveedor</th>
+                  <th>Total</th>
+                  <th>Tiempo</th>
+                </tr>
+                <tr>
+                  <td>{{ orden.articulo }}</td>
+                  <td>{{ orden.precio }}</td>
+                  <td>{{ orden.cantidad }}</td>
+                  <td>{{ orden.proveedores }}</td>
+                  <td>{{ orden.total }}</td>
+                  <td>{{ orden.tiempo }}</td>
+                </tr>
+              </tbody></table>
+            </div>
+            </div>
 
  <form method="post">
     {% csrf_token %}
       <div class="col-md-12">
           {% bootstrap_field form.condicion %}
       </div>
-      <div class="col-md-12">
+      <div class="col-md-2">
         <div class="input-group date">
             <div class="input-group-addon">
               <i class="fa fa-calendar"></i>
@@ -55,14 +79,15 @@
 {% endblock pie_panel %}
 
 {% block js %}
-<script>
+
+  <script>
 
   //Date picker
   $('.datepicker').datepicker({
     autoclose: true,
     format: 'dd/mm/yyyy'
-
   })
 
   </script>
-  {% endblock js %}
+
+{% endblock js %}
