--- a/templates/inventario/registrarEntrada.html
+++ b/templates/inventario/registrarEntrada.html
@@ -65,7 +65,7 @@
           {% bootstrap_field form.razon_devolucion %}
       </div>
 
-      <input type="hidden" id="ordenCompra" name="ordenCompra" value="{{ orden }}"> 
+      <input type="hidden" id="ordenCompra" name="ordenCompra" value="{{ orden.id }}"> 
 
       <div class="col-md-12">
           <button type="submit" class="btn btn-success">Registrar</button>
