--- a/apps/ordenes_servicio/templates/ordenes_servicio/crear_orden_servicio.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/crear_orden_servicio.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'ordenes_servicio/base.html' %}
 {% load staticfiles %}
 {% load bootstrap3 %}
 
@@ -6,6 +6,8 @@
 {% endblock miga_pan %}
 
 {% block titulo %}Orden Servicio{% endblock titulo %}
+
+{% block titulo_pagina %}Crear Orden de Servicio{% endblock %}
 
 {% block css %}
 <style media="screen">
@@ -16,9 +18,7 @@
 
 <div class="col-md-12">
   <div class="box box-primary">
-      <div class="box-header">
-          <h3 class="box-title">Crear Orden de Servicio</h3>
-      </div>
+ 
       <div class="box-body">
         <form method="POST" id="formulario"> {% csrf_token %}
           <div class="row">
@@ -42,7 +42,11 @@
                   <input type="text" name="encargado" id="id_encargado" class="form-control hidden">
               </div>
           </div>
-          <button type="submit" class="btn btn-success">Registrar</button>
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-success bg-olive-active pull-right">Registrar</button>
+                </div>
+            </div>
         </form>
       </div>
     </div>
