cambio minimo en form y html

--- a/apps/ordenes_servicio/templates/ordenes_servicio/crear_orden_servicio.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/crear_orden_servicio.html
@@ -68,5 +68,9 @@
       document.getElementById("id_encargado_select").value = "";
     });
 
+    $('.basicAutoSelect').keypress(function() {
+      document.getElementById("id_encargado_seleccionado_texto").value = "";
+    });
+
 </script>
 {% endblock js %}
