--- a/templates/inventario/registrarEntrada.html
+++ b/templates/inventario/registrarEntrada.html
@@ -54,7 +54,7 @@
           {% bootstrap_field form.condicion %}
       </div>
       <div class="col-md-12">
-          {% bootstrap_field form.razon_devolucion %}
+          {% bootstrap_field form.comentario %}
       </div>
 
       <input type="hidden" id="ordenCompra" name="ordenCompra" value="{{ orden.id }}">
