--- a/templates/inventario/inventario.html
+++ b/templates/inventario/inventario.html
@@ -1,12 +1,27 @@
 {% extends 'base.html' %}
 
+{% block css %}
+<style>
+ .btn {border:1px solid transparent; margin: 0px; border-color:#00acd6; padding: 5px;}
+</style>
+
+{% endblock css %}
+
 
 {% block titulo %} Inventario{% endblock titulo %}
 {% block titulo_pagina %}Inventario{% endblock titulo_pagina %}
 
+{% block miga_pan %}
+
+  <li><a href="/inventario"><i class="fa fa-dashboard"></i> Dashboard Inventario</a></li>
+  <li class="active">Inventario</li>
+
+{% endblock miga_pan %}
+
+
 {% block contenido_panel %}
 
-<table id="tabla_escuelas" cellspacing="0" width="100%" style="width: 100%;" aria-describedby="demo-dt-basic_info" class="table table-striped table-bordered dataTable no-footer dtr-inline">
+<table id="tabla" cellspacing="0" width="100%" style="width: 100%;" aria-describedby="demo-dt-basic_info" class="table table-striped table-bordered dataTable no-footer dtr-inline">
           <thead>
             <tr>
               <th class="text-center">ID</th>
@@ -36,3 +51,19 @@
 {% block pie_panel %}
 
 {% endblock pie_panel %}
+
+
+{% block js %}
+<script>
+  $(function () {
+    $('#tabla').DataTable({
+      'paging'      : true,
+      'lengthChange': false,
+      'searching'   : true,
+      'ordering'    : true,
+      'info'        : true,
+      'autoWidth'   : true
+    })
+  })
+</script>
+{% endblock js %}
