--- a/apps/usuarios/templates/usuarios/editar_usuario.html
+++ b/apps/usuarios/templates/usuarios/editar_usuario.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
 
-{% block titulo_pagina %}Crear Usuarios{% endblock titulo_pagina %}
+{% block titulo_pagina %}Editar Usuarios{% endblock titulo_pagina %}
 {% block titulo %}Gestión de Usuarios{% endblock titulo %}
 {% block descripcion_pagina %} Gestiona los usuarios de ERPAdmin {% endblock descripcion_pagina %}
 {% block miga_pan %}
@@ -22,7 +22,7 @@
     {% endfor %}
 {% endblock contenido_panel %}
 {% block pie_panel %}
-    <button type="submit" class="btn btn-raised btn-success">Crear Usuario</button>
+    <button type="submit" class="btn btn-raised btn-success">Guardar Usuario</button>
 </form>
 {% endblock pie_panel %}
 
