--- a/apps/usuarios/templates/usuarios/editar_usuario.html
+++ b/apps/usuarios/templates/usuarios/editar_usuario.html
@@ -13,13 +13,60 @@
 {% block contenido_panel %}
 
 <form method="post" role="form">
-    {% csrf_token %}
+     {% csrf_token %}
+
+    <div class="row">
+        <div class="col-sm-4">
+            {% bootstrap_field form.first_name %}
+        </div>
+        <div class="col-sm-4">
+            {% bootstrap_field form.last_name %}
+        </div>
+        <div class="col-sm-4">
+            {% bootstrap_field form.cedula %}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-4">
+            {% bootstrap_field form.username %}
+        </div>
+        <div class="col-sm-4">
+            {% bootstrap_field form.cargo %}
+        </div>
+        <div class="col-sm-4">
+            {% bootstrap_field form.email %}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-4">
+            {% bootstrap_field form.fecha_nacimiento %}
+        </div>
+            <div class="col-sm-4">
+            {% bootstrap_field form.telefono %}
+        </div>
+        <div class="col-sm-4">
+            {% bootstrap_field form.direccion %}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6">
+            {% bootstrap_field form.estado_civil %}
+        </div>
+            <div class="col-sm-6">
+            {% bootstrap_field form.is_active %}
+        </div>
+    </div>
+
+
     {% for field in form %}
-        <p>{% bootstrap_field field %}<p>
         {% for error in field.errors %}
             <p style="color: red">{{ error }}</p>
         {% endfor %}
     {% endfor %}
+
 {% endblock contenido_panel %}
 {% block pie_panel %}
     <button type="submit" class="btn btn-raised btn-success">Guardar Usuario</button>
