--- a/templates/inventario/inventario.html
+++ b/templates/inventario/inventario.html
@@ -3,6 +3,9 @@
 {% block css %}
 <style>
  .btn {border:1px solid transparent; margin: 0px; border-color:#00acd6; padding: 5px;}
+ .bg-purple {
+    background-color: #2196f3 !important;
+}
 </style>
 
 {% endblock css %}
