--- a/apps/ordenes_servicio/templates/ordenes_servicio/base.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/base.html
@@ -144,7 +144,8 @@
                     "preventDuplicates": true,
                     "showEasing": "swing",
                     "extendedTimeOut": 30000,
-                    "timeOut": 4000
+                    "timeOut": 4000,
+                    "positionClass": "toast-bottom-right"
                 }
                 toastr["{{ msg.tags }}"]("{{ msg }}")
             }, 500);
